# ED2

01-buscaLinearMemoria/: CMakeLists.txt  saida.txt
01-buscaLinearMemoria/include/: tabelaEncadeada.h  tabelaIndexada.h
01-buscaLinearMemoria/src/: mainBuscaLinear.c  tabelaEncadeada.c  tabelaIndexada.c
sudoku/: CMakeLists.txt  teste.csv
sudoku/include/: binary_search.hpp  customTypes.hpp  file_parser.hpp  main.hpp  sort.hpp  sudoku.hpp  vetor.hpp
sudoku/src/: binary_search.cpp  file_parser.cpp  main.cpp  sort.cpp  sudoku.cpp  vetor.cpp
